// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`openapi-web-gen OpenAPI-Specification/examples/v3.0/link-example.yaml should generate components/schemas/ Pullrequest.ts 1`] = `
"/* Generated source, do not modify! */

export interface User {
  readonly username?: string;

  readonly uuid?: string;
}
"
`;

exports[`openapi-web-gen OpenAPI-Specification/examples/v3.0/link-example.yaml should generate components/schemas/ Repository.ts 1`] = `
"/* Generated source, do not modify! */

export interface User {
  readonly username?: string;

  readonly uuid?: string;
}
"
`;

exports[`openapi-web-gen OpenAPI-Specification/examples/v3.0/link-example.yaml should generate components/schemas/ User.ts 1`] = `
"/* Generated source, do not modify! */

export interface User {
  readonly username?: string;

  readonly uuid?: string;
}
"
`;

exports[`openapi-web-gen OpenAPI-Specification/examples/v3.0/petstore.yaml should generate common/Common.ts 1`] = `
"/* Generated source, do not modify! */

export interface ServerVariableObject {
  enum?: string[];
  default: string;
  description?: string;
}

export interface ServerObject {
  url: string;
  description?: string;
  variables?: Record<string, ServerVariableObject>;
}

export type ServerMapper = (servers: ServerObject[]) => string;

export const servers: ServerObject[] = [
  {
    url: \\"http://petstore.swagger.io/v1\\"
  }
];

export function createBaseUrl(mapper: ServerMapper): string {
  return mapper(servers);
}
"
`;

exports[`openapi-web-gen OpenAPI-Specification/examples/v3.0/petstore.yaml should generate components/schemas/ Error.ts 1`] = `
"/* Generated source, do not modify! */

export interface Error {
  /**
   * format: int32
   */
  readonly code: number;

  readonly message: string;
}
"
`;

exports[`openapi-web-gen OpenAPI-Specification/examples/v3.0/petstore.yaml should generate components/schemas/ Pet.ts 1`] = `
"/* Generated source, do not modify! */

export interface Pet {
  /**
   * format: int64
   */
  readonly id: number;

  readonly name: string;

  readonly tag?: string;
}
"
`;

exports[`openapi-web-gen OpenAPI-Specification/examples/v3.0/petstore.yaml should generate components/schemas/ Pets.ts 1`] = `
"/* Generated source, do not modify! */

import { Pet } from \\"./Pet\\";

export interface Pets extends Array<Pet> {}
"
`;

exports[`openapi-web-gen OpenAPI-Specification/examples/v3.0/petstore-expanded.yaml should generate common/Common.ts 1`] = `
"/* Generated source, do not modify! */

export interface ServerVariableObject {
  enum?: string[];
  default: string;
  description?: string;
}

export interface ServerObject {
  url: string;
  description?: string;
  variables?: Record<string, ServerVariableObject>;
}

export type ServerMapper = (servers: ServerObject[]) => string;

export const servers: ServerObject[] = [
  {
    url: \\"http://petstore.swagger.io/api\\"
  }
];

export function createBaseUrl(mapper: ServerMapper): string {
  return mapper(servers);
}
"
`;

exports[`openapi-web-gen OpenAPI-Specification/examples/v3.0/petstore-expanded.yaml should generate components/schemas/ Error.ts 1`] = `
"/* Generated source, do not modify! */

export interface Error {
  /**
   * format: int32
   */
  readonly code: number;

  readonly message: string;
}
"
`;

exports[`openapi-web-gen OpenAPI-Specification/examples/v3.0/petstore-expanded.yaml should generate components/schemas/ NewPet.ts 1`] = `
"/* Generated source, do not modify! */

export interface NewPet {
  name: string;

  tag?: string;
}
"
`;

exports[`openapi-web-gen OpenAPI-Specification/examples/v3.0/petstore-expanded.yaml should generate components/schemas/ Pet.ts 1`] = `
"/* Generated source, do not modify! */

import { NewPet } from \\"./NewPet\\";

export interface Pet extends NewPet {
  /**
   * format: int64
   */
  readonly id: number;
}
"
`;

exports[`openapi-web-gen OpenAPI-Specification/examples/v3.0/petstore-expanded.yaml should generate paths/ AddPet.ts 1`] = `
"/* Generated source, do not modify! */

import { HttpMethods } from \\"../constants/HttpMethods\\";
import { NewPet } from \\"../components/schemas/NewPet\\";
import { MediaTypes } from \\"../constants/MediaTypes\\";
import { HttpHeaders } from \\"../constants/HttpHeaders\\";

/**
 
 * @param {string} [baseUrl] If present, will be prepended to the URI. If missing, the result will be ensured to be a relative URL.
 */
export function createPath(baseUrl?: string): string {
  return baseUrl ? \`\${baseUrl}/pets\` : \`pets\`;
}

export const method: HttpMethods = HttpMethods.POST;

export const headers: Record<string, string> = {
  [HttpHeaders.ACCEPT]: MediaTypes.APPLICATION_JSON,
  [HttpHeaders.CONTENT_TYPE]: MediaTypes.APPLICATION_JSON
};

export type RequestBody = NewPet;
"
`;

exports[`openapi-web-gen OpenAPI-Specification/examples/v3.0/uspto.yaml should generate common/Common.ts 1`] = `
"/* Generated source, do not modify! */

export interface ServerVariableObject {
  enum?: string[];
  default: string;
  description?: string;
}

export interface ServerObject {
  url: string;
  description?: string;
  variables?: Record<string, ServerVariableObject>;
}

export type ServerMapper = (servers: ServerObject[]) => string;

export const servers: ServerObject[] = [
  {
    url: \\"\${scheme}://developer.uspto.gov/ds-api\\",

    variables: {
      scheme: {
        default: \\"https\\",
        description: \\"The Data Set API is accessible via https and http\\",
        enum: [\\"https\\", \\"http\\"]
      }
    }
  }
];

export function createBaseUrl(mapper: ServerMapper): string {
  return mapper(servers);
}
"
`;

exports[`openapi-web-gen OpenAPI-Specification/examples/v3.0/uspto.yaml should generate components/schemas/ DataSetList.ts 1`] = `
"/* Generated source, do not modify! */

export interface DataSetList {
  readonly total?: number;

  readonly apis?: ReadonlyArray<any>;
}
"
`;

exports[`openapi-web-gen OpenAPI-Specification/examples/v3.0/uspto.yaml should generate paths/ PerformSearch.ts 1`] = `
"/* Generated source, do not modify! */

import { HttpMethods } from \\"../constants/HttpMethods\\";
import { MediaTypes } from \\"../constants/MediaTypes\\";
import { HttpHeaders } from \\"../constants/HttpHeaders\\";

export interface PathParams {
  /**
   * description: Version of the dataset.
   */
  version: string;

  /**
   * description: Name of the dataset. In this case, the default value is oa_citations
   */
  dataset: string;
}

/**
 * @param {PathParams} pathParams Object containing values which will be interpolated to the path segment
 * @param {string} [baseUrl] If present, will be prepended to the URI. If missing, the result will be ensured to be a relative URL.
 */
export function createPath(pathParams: PathParams, baseUrl?: string): string {
  return baseUrl
    ? \`\${baseUrl}/\${pathParams.dataset}/\${pathParams.version}/records\`
    : \`\${pathParams.dataset}/\${pathParams.version}/records\`;
}

export const method: HttpMethods = HttpMethods.POST;

export const headers: Record<string, string> = {
  [HttpHeaders.ACCEPT]: MediaTypes.APPLICATION_JSON,
  [HttpHeaders.CONTENT_TYPE]: MediaTypes.APPLICATION_FORM_URLENCODED
};
"
`;

exports[`openapi-web-gen flags common/Common.ts 1`] = `
"/* Generated source, do not modify! */

export interface ServerVariableObject {
    enum?: string[];
    default: string;
    description?: string;
}

export interface ServerObject {
    url: string;
    description?: string;
    variables?: Record<string, ServerVariableObject>;
}

export type ServerMapper = (servers: ServerObject[]) => string;

export const servers: ServerObject[] = [
    {
        url: 'http://petstore.swagger.io/v1'
    }
];

export function createBaseUrl(mapper: ServerMapper): string {
    return mapper(servers);
}
"
`;

exports[`openapi-web-gen odata-openapi/Northwind.openapi3.json should generate common/Common.ts 1`] = `
"/* Generated source, do not modify! */

export interface ServerVariableObject {
  enum?: string[];
  default: string;
  description?: string;
}

export interface ServerObject {
  url: string;
  description?: string;
  variables?: Record<string, ServerVariableObject>;
}

export type ServerMapper = (servers: ServerObject[]) => string;

export const servers: ServerObject[] = [
  {
    url: \\"https://services.odata.org/V4/Northwind/Northwind.svc\\"
  }
];

export function createBaseUrl(mapper: ServerMapper): string {
  return mapper(servers);
}
"
`;

exports[`openapi-web-gen odata-openapi/Northwind.openapi3.json should generate components/responses/Error.ts 1`] = `
"/* Generated source, do not modify! */

export interface Error {
  error: any;
}
"
`;

exports[`openapi-web-gen odata-openapi/Northwind.openapi3.json should generate components/schemas/ NorthwindModelAlphabeticalListOfProduct.ts 1`] = `
"/* Generated source, do not modify! */

export interface NorthwindModelAlphabeticalListOfProduct {
  /**
   * format: int32
   */
  readonly ProductID?: number;

  /**
   * maxLength: 40
   */
  readonly ProductName?: string;

  /**
   * format: int32
   */
  readonly SupplierID?: number;

  /**
   * format: int32
   */
  readonly CategoryID?: number;

  /**
   * maxLength: 20
   */
  readonly QuantityPerUnit?: string;

  /**
   * format: decimal
   * multipleOf: 0.0001
   */
  readonly UnitPrice?: number | string;

  /**
   * format: int16
   */
  readonly UnitsInStock?: number;

  /**
   * format: int16
   */
  readonly UnitsOnOrder?: number;

  /**
   * format: int16
   */
  readonly ReorderLevel?: number;

  readonly Discontinued?: boolean;

  /**
   * maxLength: 15
   */
  readonly CategoryName?: string;
}
"
`;

exports[`openapi-web-gen odata-openapi/Northwind.openapi3.json should generate components/schemas/ NorthwindModelCategory.ts 1`] = `
"/* Generated source, do not modify! */

import { NorthwindModelProduct } from \\"./NorthwindModelProduct\\";

export interface NorthwindModelCategory {
  /**
   * format: int32
   */
  readonly CategoryID?: number;

  /**
   * maxLength: 15
   */
  readonly CategoryName?: string;

  readonly Description?: string;

  /**
   * format: base64url
   */
  readonly Picture?: string;

  readonly Products?: ReadonlyArray<NorthwindModelProduct>;
}
"
`;

exports[`openapi-web-gen odata-openapi/Northwind.openapi3.json should generate components/schemas/ NorthwindModelCurrentProductListCreate.ts 1`] = `
"/* Generated source, do not modify! */

export interface NorthwindModelCurrentProductListCreate {
  /**
   * format: int32
   */
  ProductID: number;

  /**
   * maxLength: 40
   */
  ProductName: string;
}
"
`;

exports[`openapi-web-gen odata-openapi/Northwind.openapi3.json should generate components/schemas/ NorthwindModelCustomer.ts 1`] = `
"/* Generated source, do not modify! */

import { NorthwindModelOrder } from \\"./NorthwindModelOrder\\";
import { NorthwindModelCustomerDemographic } from \\"./NorthwindModelCustomerDemographic\\";

export interface NorthwindModelCustomer {
  /**
   * maxLength: 5
   */
  readonly CustomerID?: string;

  /**
   * maxLength: 40
   */
  readonly CompanyName?: string;

  /**
   * maxLength: 30
   */
  readonly ContactName?: string;

  /**
   * maxLength: 30
   */
  readonly ContactTitle?: string;

  /**
   * maxLength: 60
   */
  readonly Address?: string;

  /**
   * maxLength: 15
   */
  readonly City?: string;

  /**
   * maxLength: 15
   */
  readonly Region?: string;

  /**
   * maxLength: 10
   */
  readonly PostalCode?: string;

  /**
   * maxLength: 15
   */
  readonly Country?: string;

  /**
   * maxLength: 24
   */
  readonly Phone?: string;

  /**
   * maxLength: 24
   */
  readonly Fax?: string;

  readonly Orders?: ReadonlyArray<NorthwindModelOrder>;

  readonly CustomerDemographics?: ReadonlyArray<
    NorthwindModelCustomerDemographic
  >;
}
"
`;

exports[`openapi-web-gen odata-openapi/Northwind.openapi3.json should generate components/schemas/ NorthwindModelEmployee.ts 1`] = `
"/* Generated source, do not modify! */

import { NorthwindModelOrder } from \\"./NorthwindModelOrder\\";
import { NorthwindModelTerritory } from \\"./NorthwindModelTerritory\\";

export interface NorthwindModelEmployee {
  /**
   * format: int32
   */
  readonly EmployeeID?: number;

  /**
   * maxLength: 20
   */
  readonly LastName?: string;

  /**
   * maxLength: 10
   */
  readonly FirstName?: string;

  /**
   * maxLength: 30
   */
  readonly Title?: string;

  /**
   * maxLength: 25
   */
  readonly TitleOfCourtesy?: string;

  /**
   * format: date-time
   */
  readonly BirthDate?: string;

  /**
   * format: date-time
   */
  readonly HireDate?: string;

  /**
   * maxLength: 60
   */
  readonly Address?: string;

  /**
   * maxLength: 15
   */
  readonly City?: string;

  /**
   * maxLength: 15
   */
  readonly Region?: string;

  /**
   * maxLength: 10
   */
  readonly PostalCode?: string;

  /**
   * maxLength: 15
   */
  readonly Country?: string;

  /**
   * maxLength: 24
   */
  readonly HomePhone?: string;

  /**
   * maxLength: 4
   */
  readonly Extension?: string;

  /**
   * format: base64url
   */
  readonly Photo?: string;

  readonly Notes?: string;

  /**
   * format: int32
   */
  readonly ReportsTo?: number;

  /**
   * maxLength: 255
   */
  readonly PhotoPath?: string;

  readonly Employees1?: ReadonlyArray<NorthwindModelEmployee>;

  readonly Employee1?: NorthwindModelEmployee;

  readonly Orders?: ReadonlyArray<NorthwindModelOrder>;

  readonly Territories?: ReadonlyArray<NorthwindModelTerritory>;
}
"
`;

exports[`openapi-web-gen odata-openapi/Northwind.openapi3.json should generate components/schemas/ NorthwindModelOrderDetail.ts 1`] = `
"/* Generated source, do not modify! */

import { NorthwindModelOrder } from \\"./NorthwindModelOrder\\";
import { NorthwindModelProduct } from \\"./NorthwindModelProduct\\";

export interface NorthwindModelOrderDetail {
  /**
   * format: int32
   */
  readonly OrderID?: number;

  /**
   * format: int32
   */
  readonly ProductID?: number;

  /**
   * format: decimal
   * multipleOf: 0.0001
   */
  readonly UnitPrice?: number | string;

  /**
   * format: int16
   */
  readonly Quantity?: number;

  /**
   * format: float
   */
  readonly Discount?: number | string;

  readonly Order?: NorthwindModelOrder;

  readonly Product?: NorthwindModelProduct;
}
"
`;

exports[`openapi-web-gen odata-openapi/Northwind.openapi3.json should generate paths/ GetEntitiesFromRelatedProducts.ts 1`] = `
"/* Generated source, do not modify! */

import { HttpMethods } from \\"../constants/HttpMethods\\";
import { MediaTypes } from \\"../constants/MediaTypes\\";
import { HttpHeaders } from \\"../constants/HttpHeaders\\";

/**
 * description: Order items by property values, see [Sorting](http://docs.oasis-open.org/odata/odata/v4.01/odata-v4.01-part1-protocol.html#sec_SystemQueryOptionorderby)
 */
export enum OrderbyEnum {
  ProductID = \\"ProductID\\",
  ProductIDDesc = \\"ProductID desc\\",
  ProductName = \\"ProductName\\",
  ProductNameDesc = \\"ProductName desc\\",
  SupplierID = \\"SupplierID\\",
  SupplierIDDesc = \\"SupplierID desc\\",
  CategoryID = \\"CategoryID\\",
  CategoryIDDesc = \\"CategoryID desc\\",
  QuantityPerUnit = \\"QuantityPerUnit\\",
  QuantityPerUnitDesc = \\"QuantityPerUnit desc\\",
  UnitPrice = \\"UnitPrice\\",
  UnitPriceDesc = \\"UnitPrice desc\\",
  UnitsInStock = \\"UnitsInStock\\",
  UnitsInStockDesc = \\"UnitsInStock desc\\",
  UnitsOnOrder = \\"UnitsOnOrder\\",
  UnitsOnOrderDesc = \\"UnitsOnOrder desc\\",
  ReorderLevel = \\"ReorderLevel\\",
  ReorderLevelDesc = \\"ReorderLevel desc\\",
  Discontinued = \\"Discontinued\\",
  DiscontinuedDesc = \\"Discontinued desc\\"
}

/**
 * description: Select properties to be returned, see [Select](http://docs.oasis-open.org/odata/odata/v4.01/odata-v4.01-part1-protocol.html#sec_SystemQueryOptionselect)
 */
export enum SelectEnum {
  ProductID = \\"ProductID\\",
  ProductName = \\"ProductName\\",
  SupplierID = \\"SupplierID\\",
  CategoryID = \\"CategoryID\\",
  QuantityPerUnit = \\"QuantityPerUnit\\",
  UnitPrice = \\"UnitPrice\\",
  UnitsInStock = \\"UnitsInStock\\",
  UnitsOnOrder = \\"UnitsOnOrder\\",
  ReorderLevel = \\"ReorderLevel\\",
  Discontinued = \\"Discontinued\\"
}

/**
 * description: Expand related entities, see [Expand](http://docs.oasis-open.org/odata/odata/v4.01/odata-v4.01-part1-protocol.html#sec_SystemQueryOptionexpand)
 */
export enum ExpandEnum {
  _ALL_ = \\"*\\",
  Category = \\"Category\\",
  OrderDetails = \\"Order_Details\\",
  Supplier = \\"Supplier\\"
}

export interface PathParams {
  /**
   * description: key: SupplierID
   */
  SupplierID: number;
}

export interface RequestSearchParams {
  $filter?: string;
  $orderby?: Set<OrderbyEnum>;
  $select?: Set<SelectEnum>;
  $expand?: Set<ExpandEnum>;
}

/**
 * @param {PathParams} pathParams Object containing values which will be interpolated to the path segment
 * @param {string} [baseUrl] If present, will be prepended to the URI. If missing, the result will be ensured to be a relative URL.
 */
export function createPath(pathParams: PathParams, baseUrl?: string): string {
  return baseUrl
    ? \`\${baseUrl}/Suppliers(\${pathParams.SupplierID})/Products\`
    : \`Suppliers(\${pathParams.SupplierID})/Products\`;
}

export const method: HttpMethods = HttpMethods.GET;

export const headers: Record<string, string> = {
  [HttpHeaders.ACCEPT]: MediaTypes.APPLICATION_JSON
};
"
`;

exports[`openapi-web-gen odata-openapi/Northwind.openapi3.json should generate paths/ GetEntitiesFromSalesTotalsByAmounts.ts 1`] = `
"/* Generated source, do not modify! */

import { HttpMethods } from \\"../constants/HttpMethods\\";
import { MediaTypes } from \\"../constants/MediaTypes\\";
import { HttpHeaders } from \\"../constants/HttpHeaders\\";

/**
 * description: Order items by property values, see [Sorting](http://docs.oasis-open.org/odata/odata/v4.01/odata-v4.01-part1-protocol.html#sec_SystemQueryOptionorderby)
 */
export enum OrderbyEnum {
  SaleAmount = \\"SaleAmount\\",
  SaleAmountDesc = \\"SaleAmount desc\\",
  OrderID = \\"OrderID\\",
  OrderIDDesc = \\"OrderID desc\\",
  CompanyName = \\"CompanyName\\",
  CompanyNameDesc = \\"CompanyName desc\\",
  ShippedDate = \\"ShippedDate\\",
  ShippedDateDesc = \\"ShippedDate desc\\"
}

/**
 * description: Select properties to be returned, see [Select](http://docs.oasis-open.org/odata/odata/v4.01/odata-v4.01-part1-protocol.html#sec_SystemQueryOptionselect)
 */
export enum SelectEnum {
  SaleAmount = \\"SaleAmount\\",
  OrderID = \\"OrderID\\",
  CompanyName = \\"CompanyName\\",
  ShippedDate = \\"ShippedDate\\"
}

export interface RequestSearchParams {
  $filter?: string;
  $orderby?: Set<OrderbyEnum>;
  $select?: Set<SelectEnum>;
}

/**
 
 * @param {string} [baseUrl] If present, will be prepended to the URI. If missing, the result will be ensured to be a relative URL.
 */
export function createPath(baseUrl?: string): string {
  return baseUrl
    ? \`\${baseUrl}/Sales_Totals_by_Amounts\`
    : \`Sales_Totals_by_Amounts\`;
}

export const method: HttpMethods = HttpMethods.GET;

export const headers: Record<string, string> = {
  [HttpHeaders.ACCEPT]: MediaTypes.APPLICATION_JSON
};
"
`;

exports[`openapi-web-gen odata-openapi/Northwind.openapi3.json should generate paths/ UpdateEntityInAlphabeticalListOfProducts.ts 1`] = `
"/* Generated source, do not modify! */

import { HttpMethods } from \\"../constants/HttpMethods\\";
import { NorthwindModelAlphabeticalListOfProductUpdate } from \\"../components/schemas/NorthwindModelAlphabeticalListOfProductUpdate\\";
import { MediaTypes } from \\"../constants/MediaTypes\\";
import { HttpHeaders } from \\"../constants/HttpHeaders\\";

export interface PathParams {
  /**
   * description: key: CategoryName
   * maxLength: 15
   */
  CategoryName: string;

  /**
   * description: key: Discontinued
   */
  Discontinued: boolean;

  /**
   * description: key: ProductID
   */
  ProductID: number;

  /**
   * description: key: ProductName
   * maxLength: 40
   */
  ProductName: string;
}

/**
 * @param {PathParams} pathParams Object containing values which will be interpolated to the path segment
 * @param {string} [baseUrl] If present, will be prepended to the URI. If missing, the result will be ensured to be a relative URL.
 */
export function createPath(pathParams: PathParams, baseUrl?: string): string {
  return baseUrl
    ? \`\${baseUrl}/Alphabetical_list_of_products(CategoryName='\${pathParams.CategoryName}',Discontinued='\${pathParams.Discontinued}',ProductID=\${pathParams.ProductID},ProductName='\${pathParams.ProductName}')\`
    : \`Alphabetical_list_of_products(CategoryName='\${pathParams.CategoryName}',Discontinued='\${pathParams.Discontinued}',ProductID=\${pathParams.ProductID},ProductName='\${pathParams.ProductName}')\`;
}

export const method: HttpMethods = HttpMethods.PATCH;

export const headers: Record<string, string> = {
  [HttpHeaders.CONTENT_TYPE]: MediaTypes.APPLICATION_JSON
};

export type RequestBody = NorthwindModelAlphabeticalListOfProductUpdate;
"
`;
